--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
         - '$HOME/.m2/repository'
         - '$HOME/.gradle'
 
-# master branch 에 푸시되었을 때 수행하는 명령어
+# master branch 에 푸시되었을 때 수행하는 명령어임
 script: "./gradlew clean build"
 
 # CI 실행 완료 시 메일로 알람
