--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,13 @@ script: "./gradlew clean build"
   
 # Jar 파일을 S3에 올릴 수 있도록 설정
 before_deploy:
-    - zip -r springboot_webservice_cicd *  # 현재 위치의 모든 파일을 zip
-    - mkdir -p deploy   # trvis ci 가 실행 중인 위치에서 생성
-    - mv springboot_webservice_cicd.zip deploy/springboot_webservice_cicd.zip
+    - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성
+    - cp scripts/*.sh before-deploy/
+    - cp appspec.yml before-deploy/
+    - cp build/libs/*.jar before-deploy/
+    - cd before-deploy && zip -r before-deploy * # before-deploy로 이동후 전체 압축
+    - cd ../ && mkdir -p deploy # 상위 디렉토리로 이동후 deploy 디렉토리 생성
+    - mv before-deploy/before-deploy.zip deploy/springboot-webservice-cicd.zip # deploy로 zip파일 이동
 
 
 
